testGrammar.output
Terminals unused in grammar

   TOK_BOOLVAL
   TOK_CHARVAL
   TOK_LONGVAL
   TOK_SHORTVAL
   TOK_NULLVAL
   TOK_ABSTRACT
   TOK_CONTINUE
   TOK_NEW
   TOK_SWITCH
   TOK_ASSERT
   TOK_DEFAULT
   TOK_GOTO
   TOK_PACKAGE
   TOK_SYNCHRONIZED
   TOK_DO
   TOK_PRIVATE
   TOK_THIS
   TOK_BREAK
   TOK_DOUBLE
   TOK_IMPLEMENTS
   TOK_PROTECTED
   TOK_THROW
   TOK_BYTE
   TOK_IMPORT
   TOK_THROWS
   TOK_CASE
   TOK_ENUM
   TOK_INSTANCEOF
   TOK_RETURN
   TOK_TRANSIENT
   TOK_CATCH
   TOK_EXTENDS
   TOK_SHORT
   TOK_TRY
   TOK_CHAR
   TOK_FINAL
   TOK_INTERFACE
   TOK_FINALLY
   TOK_LONG
   TOK_STRICTFP
   TOK_VOLATILE
   TOK_CONST
   TOK_NATIVE
   TOK_SUPER
   TOK_COLON
   TOK_QUESTION
   TOK_BITOR
   TOK_BITAND
   TOK_BITXOR
   TOK_LSHIFT
   TOK_RSHIFT
   TOK_RSHIFTZ
   TOK_BITNEG
   TOK_NEG


State 74 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: classdec
    2        | program classdec

    3 classdec: accessmod TOK_CLASS TOK_IDENTIFIER TOK_LBRACE classbody TOK_RBRACE

    4 accessmod: TOK_PUBLIC

    5 classbody: method
    6          | classbody method

    7 method: staticmethod
    8       | main
    9       | instancemethod

   10 main: accessmod TOK_STATIC returntype TOK_IDENTIFIER TOK_LPAREN datatype TOK_IDENTIFIER TOK_LBRACKET TOK_RBRACKET TOK_RPAREN TOK_LBRACE block TOK_RBRACE

   11 staticmethod: accessmod TOK_STATIC returntype TOK_IDENTIFIER TOK_LPAREN formalparameters TOK_RPAREN TOK_LBRACE block TOK_RBRACE

   12 instancemethod: accessmod returntype TOK_IDENTIFIER TOK_LPAREN formalparameters TOK_RPAREN TOK_LBRACE block TOK_RBRACE

   13 returntype: TOK_VOID
   14           | datatype

   15 formalparameters: datatype TOK_IDENTIFIER
   16                 | formalparameters TOK_COMMA datatype TOK_IDENTIFIER

   17 argument: %empty
   18         | arithmeticopexpression
   19         | TOK_STRINGVAL

   20 datatype: TOK_IDENTIFIER
   21         | TOK_INT
   22         | TOK_BOOLEAN
   23         | TOK_FLOAT

   24 block: statement
   25      | block statement

   26 statement: expressionstatement
   27          | controlflowstatement
   28          | declarationstatement
   29          | assignmentstatement
   30          | initializationstatement

   31 expressionstatement: methodinvocation TOK_SEMI
   32                    | postdecrement TOK_SEMI
   33                    | predecrement TOK_SEMI

   34 controlflowstatement: whileloop
   35                     | forloop
   36                     | ifstatement
   37                     | ifelsestatement

   38 declarationstatement: datatype TOK_IDENTIFIER TOK_SEMI

   39 assignmentstatement: assignmentopexpression TOK_SEMI
   40                    | TOK_IDENTIFIER TOK_ASSIGN methodinvocation TOK_SEMI

   41 initializationstatement: datatype assignmentstatement

   42 whileloop: TOK_WHILE TOK_LPAREN relationalopexpression TOK_RPAREN TOK_LBRACE block TOK_RBRACE
   43          | TOK_WHILE TOK_LPAREN logicalopexpression TOK_RPAREN TOK_LBRACE block TOK_RBRACE

   44 forloop: TOK_FOR TOK_LPAREN initializationstatement relationalopexpression TOK_SEMI postdecrement TOK_RPAREN TOK_LBRACE block TOK_RBRACE

   45 ifstatement: TOK_IF TOK_LPAREN relationalopexpression TOK_RPAREN TOK_LBRACE block TOK_RBRACE
   46            | TOK_IF TOK_LPAREN logicalopexpression TOK_RPAREN TOK_LBRACE block TOK_RBRACE

   47 ifelsestatement: ifstatement TOK_ELSE TOK_LBRACE block TOK_RBRACE

   48 arithmeticoperator: TOK_ADD
   49                   | TOK_SUB
   50                   | TOK_MOD
   51                   | TOK_DIV
   52                   | TOK_MUL

   53 relationaloperator: TOK_EQUAL
   54                   | TOK_NEQUAL
   55                   | TOK_GREATER
   56                   | TOK_LESS
   57                   | TOK_GEQUAL
   58                   | TOK_LEQUAL

   59 logicaloperator: TOK_AND
   60                | TOK_OR

   61 assignmentoperator: TOK_ASSIGN
   62                   | TOK_MODASSIGN
   63                   | TOK_DIVASSIGN
   64                   | TOK_MULASSIGN
   65                   | TOK_ADDASSIGN
   66                   | TOK_SUBASSIGN

   67 arithmeticopexpression: TOK_INTVAL
   68                       | TOK_DOUBLEVAL
   69                       | TOK_FLOATVAL
   70                       | TOK_IDENTIFIER
   71                       | arithmeticopexpression arithmeticoperator TOK_INTVAL
   72                       | arithmeticopexpression arithmeticoperator TOK_DOUBLEVAL
   73                       | arithmeticopexpression arithmeticoperator TOK_FLOATVAL
   74                       | arithmeticopexpression arithmeticoperator TOK_IDENTIFIER

   75 relationalopexpression: TOK_IDENTIFIER relationaloperator arithmeticopexpression

   76 logicalopexpression: relationalopexpression logicaloperator relationalopexpression

   77 assignmentopexpression: TOK_IDENTIFIER assignmentoperator arithmeticopexpression

   78 postdecrement: TOK_IDENTIFIER TOK_ADDADD
   79              | TOK_IDENTIFIER TOK_SUBSUB

   80 predecrement: TOK_ADDADD TOK_IDENTIFIER
   81             | TOK_SUBSUB TOK_IDENTIFIER

   82 methodinvocation: methodcall
   83                 | instancemethodcall

   84 instancemethodcall: fieldreference TOK_DOT methodcall
   85                   | TOK_IDENTIFIER TOK_DOT methodcall

   86 methodcall: TOK_IDENTIFIER TOK_LPAREN argument TOK_RPAREN
   87           | methodcall TOK_DOT TOK_IDENTIFIER TOK_LPAREN argument TOK_RPAREN

   88 fieldreference: TOK_IDENTIFIER TOK_DOT TOK_IDENTIFIER
   89               | fieldreference TOK_DOT TOK_IDENTIFIER


Terminals, with rules where they appear

$end (0) 0
TOK_IDENTIFIER (100) 3 10 11 12 15 16 20 38 40 70 74 75 77 78 79 80
    81 85 86 87 88 89
TOK_INTVAL (101) 67 71
TOK_FLOATVAL (102) 69 73
TOK_STRINGVAL (103) 19
TOK_BOOLVAL (104)
TOK_CHARVAL (105)
TOK_DOUBLEVAL (106) 68 72
TOK_LONGVAL (107)
TOK_SHORTVAL (108)
TOK_NULLVAL (109)
TOK_ABSTRACT (200)
TOK_CONTINUE (201)
TOK_FOR (202) 44
TOK_NEW (203)
TOK_SWITCH (204)
TOK_ASSERT (205)
TOK_DEFAULT (206)
TOK_GOTO (207)
TOK_PACKAGE (208)
TOK_SYNCHRONIZED (209)
TOK_BOOLEAN (210) 22
TOK_DO (211)
TOK_IF (212) 45 46
TOK_PRIVATE (213)
TOK_THIS (214)
TOK_BREAK (215)
TOK_DOUBLE (216)
TOK_IMPLEMENTS (217)
TOK_PROTECTED (218)
TOK_THROW (219)
TOK_BYTE (220)
TOK_ELSE (221) 47
TOK_IMPORT (222)
TOK_PUBLIC (223) 4
TOK_THROWS (224)
TOK_CASE (225)
TOK_ENUM (226)
TOK_INSTANCEOF (227)
TOK_RETURN (228)
TOK_TRANSIENT (229)
TOK_CATCH (230)
TOK_EXTENDS (231)
TOK_INT (232) 21
TOK_SHORT (233)
TOK_TRY (234)
TOK_CHAR (235)
TOK_FINAL (236)
TOK_INTERFACE (237)
TOK_STATIC (238) 10 11
TOK_VOID (239) 13
TOK_CLASS (240) 3
TOK_FINALLY (241)
TOK_LONG (242)
TOK_STRICTFP (243)
TOK_VOLATILE (244)
TOK_CONST (245)
TOK_FLOAT (246) 23
TOK_NATIVE (247)
TOK_SUPER (248)
TOK_WHILE (249) 42 43
error (256)
TOK_LBRACKET (300) 10
TOK_RBRACKET (301) 10
TOK_LPAREN (302) 10 11 12 42 43 44 45 46 86 87
TOK_RPAREN (303) 10 11 12 42 43 44 45 46 86 87
TOK_LBRACE (304) 3 10 11 12 42 43 44 45 46 47
TOK_RBRACE (305) 3 10 11 12 42 43 44 45 46 47
TOK_COMMA (306) 16
TOK_SEMI (307) 31 32 33 38 39 40 44
TOK_DOT (308) 84 85 87 88 89
TOK_ASSIGN (309) 40 61
TOK_MODASSIGN (310) 62
TOK_DIVASSIGN (311) 63
TOK_MULASSIGN (312) 64
TOK_ADDASSIGN (313) 65
TOK_SUBASSIGN (314) 66
TOK_COLON (315)
TOK_QUESTION (316)
TOK_OR (317) 60
TOK_AND (318) 59
TOK_BITOR (319)
TOK_BITAND (320)
TOK_BITXOR (321)
TOK_EQUAL (322) 53
TOK_NEQUAL (323) 54
TOK_LESS (324) 56
TOK_LEQUAL (325) 58
TOK_GREATER (326) 55
TOK_GEQUAL (327) 57
TOK_LSHIFT (328)
TOK_RSHIFT (329)
TOK_RSHIFTZ (330)
TOK_ADD (331) 48
TOK_SUB (332) 49
TOK_MOD (333) 50
TOK_DIV (334) 51
TOK_MUL (335) 52
TOK_BITNEG (336)
TOK_NEG (337)
TOK_SUBSUB (338) 79 81
TOK_ADDADD (339) 78 80


Nonterminals, with rules where they appear

$accept (103)
    on left: 0
program (104)
    on left: 1 2, on right: 0 2
classdec (105)
    on left: 3, on right: 1 2
accessmod (106)
    on left: 4, on right: 3 10 11 12
classbody (107)
    on left: 5 6, on right: 3 6
method (108)
    on left: 7 8 9, on right: 5 6
main (109)
    on left: 10, on right: 8
staticmethod (110)
    on left: 11, on right: 7
instancemethod (111)
    on left: 12, on right: 9
returntype (112)
    on left: 13 14, on right: 10 11 12
formalparameters (113)
    on left: 15 16, on right: 11 12 16
argument (114)
    on left: 17 18 19, on right: 86 87
datatype (115)
    on left: 20 21 22 23, on right: 10 14 15 16 38 41
block (116)
    on left: 24 25, on right: 10 11 12 25 42 43 44 45 46 47
statement (117)
    on left: 26 27 28 29 30, on right: 24 25
expressionstatement (118)
    on left: 31 32 33, on right: 26
controlflowstatement (119)
    on left: 34 35 36 37, on right: 27
declarationstatement (120)
    on left: 38, on right: 28
assignmentstatement (121)
    on left: 39 40, on right: 29 41
initializationstatement (122)
    on left: 41, on right: 30 44
whileloop (123)
    on left: 42 43, on right: 34
forloop (124)
    on left: 44, on right: 35
ifstatement (125)
    on left: 45 46, on right: 36 47
ifelsestatement (126)
    on left: 47, on right: 37
arithmeticoperator (127)
    on left: 48 49 50 51 52, on right: 71 72 73 74
relationaloperator (128)
    on left: 53 54 55 56 57 58, on right: 75
logicaloperator (129)
    on left: 59 60, on right: 76
assignmentoperator (130)
    on left: 61 62 63 64 65 66, on right: 77
arithmeticopexpression (131)
    on left: 67 68 69 70 71 72 73 74, on right: 18 71 72 73 74 75 77
relationalopexpression (132)
    on left: 75, on right: 42 44 45 76
logicalopexpression (133)
    on left: 76, on right: 43 46
assignmentopexpression (134)
    on left: 77, on right: 39
postdecrement (135)
    on left: 78 79, on right: 32 44
predecrement (136)
    on left: 80 81, on right: 33
methodinvocation (137)
    on left: 82 83, on right: 31 40
instancemethodcall (138)
    on left: 84 85, on right: 83
methodcall (139)
    on left: 86 87, on right: 82 84 85 87
fieldreference (140)
    on left: 88 89, on right: 84 89


State 0

    0 $accept: . program $end

    TOK_PUBLIC  shift, and go to state 1

    program    go to state 2
    classdec   go to state 3
    accessmod  go to state 4


State 1

    4 accessmod: TOK_PUBLIC .

    $default  reduce using rule 4 (accessmod)


State 2

    0 $accept: program . $end
    2 program: program . classdec

    $end        shift, and go to state 5
    TOK_PUBLIC  shift, and go to state 1

    classdec   go to state 6
    accessmod  go to state 4


State 3

    1 program: classdec .

    $default  reduce using rule 1 (program)


State 4

    3 classdec: accessmod . TOK_CLASS TOK_IDENTIFIER TOK_LBRACE classbody TOK_RBRACE

    TOK_CLASS  shift, and go to state 7


State 5

    0 $accept: program $end .

    $default  accept


State 6

    2 program: program classdec .

    $default  reduce using rule 2 (program)


State 7

    3 classdec: accessmod TOK_CLASS . TOK_IDENTIFIER TOK_LBRACE classbody TOK_RBRACE

    TOK_IDENTIFIER  shift, and go to state 8


State 8

    3 classdec: accessmod TOK_CLASS TOK_IDENTIFIER . TOK_LBRACE classbody TOK_RBRACE

    TOK_LBRACE  shift, and go to state 9


State 9

    3 classdec: accessmod TOK_CLASS TOK_IDENTIFIER TOK_LBRACE . classbody TOK_RBRACE

    TOK_PUBLIC  shift, and go to state 1

    accessmod       go to state 10
    classbody       go to state 11
    method          go to state 12
    main            go to state 13
    staticmethod    go to state 14
    instancemethod  go to state 15


State 10

   10 main: accessmod . TOK_STATIC returntype TOK_IDENTIFIER TOK_LPAREN datatype TOK_IDENTIFIER TOK_LBRACKET TOK_RBRACKET TOK_RPAREN TOK_LBRACE block TOK_RBRACE
   11 staticmethod: accessmod . TOK_STATIC returntype TOK_IDENTIFIER TOK_LPAREN formalparameters TOK_RPAREN TOK_LBRACE block TOK_RBRACE
   12 instancemethod: accessmod . returntype TOK_IDENTIFIER TOK_LPAREN formalparameters TOK_RPAREN TOK_LBRACE block TOK_RBRACE

    TOK_IDENTIFIER  shift, and go to state 16
    TOK_BOOLEAN     shift, and go to state 17
    TOK_INT         shift, and go to state 18
    TOK_STATIC      shift, and go to state 19
    TOK_VOID        shift, and go to state 20
    TOK_FLOAT       shift, and go to state 21

    returntype  go to state 22
    datatype    go to state 23


State 11

    3 classdec: accessmod TOK_CLASS TOK_IDENTIFIER TOK_LBRACE classbody . TOK_RBRACE
    6 classbody: classbody . method

    TOK_PUBLIC  shift, and go to state 1
    TOK_RBRACE  shift, and go to state 24

    accessmod       go to state 10
    method          go to state 25
    main            go to state 13
    staticmethod    go to state 14
    instancemethod  go to state 15


State 12

    5 classbody: method .

    $default  reduce using rule 5 (classbody)


State 13

    8 method: main .

    $default  reduce using rule 8 (method)


State 14

    7 method: staticmethod .

    $default  reduce using rule 7 (method)


State 15

    9 method: instancemethod .

    $default  reduce using rule 9 (method)


State 16

   20 datatype: TOK_IDENTIFIER .

    $default  reduce using rule 20 (datatype)


State 17

   22 datatype: TOK_BOOLEAN .

    $default  reduce using rule 22 (datatype)


State 18

   21 datatype: TOK_INT .

    $default  reduce using rule 21 (datatype)


State 19

   10 main: accessmod TOK_STATIC . returntype TOK_IDENTIFIER TOK_LPAREN datatype TOK_IDENTIFIER TOK_LBRACKET TOK_RBRACKET TOK_RPAREN TOK_LBRACE block TOK_RBRACE
   11 staticmethod: accessmod TOK_STATIC . returntype TOK_IDENTIFIER TOK_LPAREN formalparameters TOK_RPAREN TOK_LBRACE block TOK_RBRACE

    TOK_IDENTIFIER  shift, and go to state 16
    TOK_BOOLEAN     shift, and go to state 17
    TOK_INT         shift, and go to state 18
    TOK_VOID        shift, and go to state 20
    TOK_FLOAT       shift, and go to state 21

    returntype  go to state 26
    datatype    go to state 23


State 20

   13 returntype: TOK_VOID .

    $default  reduce using rule 13 (returntype)


State 21

   23 datatype: TOK_FLOAT .

    $default  reduce using rule 23 (datatype)


State 22

   12 instancemethod: accessmod returntype . TOK_IDENTIFIER TOK_LPAREN formalparameters TOK_RPAREN TOK_LBRACE block TOK_RBRACE

    TOK_IDENTIFIER  shift, and go to state 27


State 23

   14 returntype: datatype .

    $default  reduce using rule 14 (returntype)


State 24

    3 classdec: accessmod TOK_CLASS TOK_IDENTIFIER TOK_LBRACE classbody TOK_RBRACE .

    $default  reduce using rule 3 (classdec)


State 25

    6 classbody: classbody method .

    $default  reduce using rule 6 (classbody)


State 26

   10 main: accessmod TOK_STATIC returntype . TOK_IDENTIFIER TOK_LPAREN datatype TOK_IDENTIFIER TOK_LBRACKET TOK_RBRACKET TOK_RPAREN TOK_LBRACE block TOK_RBRACE
   11 staticmethod: accessmod TOK_STATIC returntype . TOK_IDENTIFIER TOK_LPAREN formalparameters TOK_RPAREN TOK_LBRACE block TOK_RBRACE

    TOK_IDENTIFIER  shift, and go to state 28


State 27

   12 instancemethod: accessmod returntype TOK_IDENTIFIER . TOK_LPAREN formalparameters TOK_RPAREN TOK_LBRACE block TOK_RBRACE

    TOK_LPAREN  shift, and go to state 29


State 28

   10 main: accessmod TOK_STATIC returntype TOK_IDENTIFIER . TOK_LPAREN datatype TOK_IDENTIFIER TOK_LBRACKET TOK_RBRACKET TOK_RPAREN TOK_LBRACE block TOK_RBRACE
   11 staticmethod: accessmod TOK_STATIC returntype TOK_IDENTIFIER . TOK_LPAREN formalparameters TOK_RPAREN TOK_LBRACE block TOK_RBRACE

    TOK_LPAREN  shift, and go to state 30


State 29

   12 instancemethod: accessmod returntype TOK_IDENTIFIER TOK_LPAREN . formalparameters TOK_RPAREN TOK_LBRACE block TOK_RBRACE

    TOK_IDENTIFIER  shift, and go to state 16
    TOK_BOOLEAN     shift, and go to state 17
    TOK_INT         shift, and go to state 18
    TOK_FLOAT       shift, and go to state 21

    formalparameters  go to state 31
    datatype          go to state 32


State 30

   10 main: accessmod TOK_STATIC returntype TOK_IDENTIFIER TOK_LPAREN . datatype TOK_IDENTIFIER TOK_LBRACKET TOK_RBRACKET TOK_RPAREN TOK_LBRACE block TOK_RBRACE
   11 staticmethod: accessmod TOK_STATIC returntype TOK_IDENTIFIER TOK_LPAREN . formalparameters TOK_RPAREN TOK_LBRACE block TOK_RBRACE

    TOK_IDENTIFIER  shift, and go to state 16
    TOK_BOOLEAN     shift, and go to state 17
    TOK_INT         shift, and go to state 18
    TOK_FLOAT       shift, and go to state 21

    formalparameters  go to state 33
    datatype          go to state 34


State 31

   12 instancemethod: accessmod returntype TOK_IDENTIFIER TOK_LPAREN formalparameters . TOK_RPAREN TOK_LBRACE block TOK_RBRACE
   16 formalparameters: formalparameters . TOK_COMMA datatype TOK_IDENTIFIER

    TOK_RPAREN  shift, and go to state 35
    TOK_COMMA   shift, and go to state 36


State 32

   15 formalparameters: datatype . TOK_IDENTIFIER

    TOK_IDENTIFIER  shift, and go to state 37


State 33

   11 staticmethod: accessmod TOK_STATIC returntype TOK_IDENTIFIER TOK_LPAREN formalparameters . TOK_RPAREN TOK_LBRACE block TOK_RBRACE
   16 formalparameters: formalparameters . TOK_COMMA datatype TOK_IDENTIFIER

    TOK_RPAREN  shift, and go to state 38
    TOK_COMMA   shift, and go to state 36


State 34

   10 main: accessmod TOK_STATIC returntype TOK_IDENTIFIER TOK_LPAREN datatype . TOK_IDENTIFIER TOK_LBRACKET TOK_RBRACKET TOK_RPAREN TOK_LBRACE block TOK_RBRACE
   15 formalparameters: datatype . TOK_IDENTIFIER

    TOK_IDENTIFIER  shift, and go to state 39


State 35

   12 instancemethod: accessmod returntype TOK_IDENTIFIER TOK_LPAREN formalparameters TOK_RPAREN . TOK_LBRACE block TOK_RBRACE

    TOK_LBRACE  shift, and go to state 40


State 36

   16 formalparameters: formalparameters TOK_COMMA . datatype TOK_IDENTIFIER

    TOK_IDENTIFIER  shift, and go to state 16
    TOK_BOOLEAN     shift, and go to state 17
    TOK_INT         shift, and go to state 18
    TOK_FLOAT       shift, and go to state 21

    datatype  go to state 41


State 37

   15 formalparameters: datatype TOK_IDENTIFIER .

    $default  reduce using rule 15 (formalparameters)


State 38

   11 staticmethod: accessmod TOK_STATIC returntype TOK_IDENTIFIER TOK_LPAREN formalparameters TOK_RPAREN . TOK_LBRACE block TOK_RBRACE

    TOK_LBRACE  shift, and go to state 42


State 39

   10 main: accessmod TOK_STATIC returntype TOK_IDENTIFIER TOK_LPAREN datatype TOK_IDENTIFIER . TOK_LBRACKET TOK_RBRACKET TOK_RPAREN TOK_LBRACE block TOK_RBRACE
   15 formalparameters: datatype TOK_IDENTIFIER .

    TOK_LBRACKET  shift, and go to state 43

    $default  reduce using rule 15 (formalparameters)


State 40

   12 instancemethod: accessmod returntype TOK_IDENTIFIER TOK_LPAREN formalparameters TOK_RPAREN TOK_LBRACE . block TOK_RBRACE

    TOK_IDENTIFIER  shift, and go to state 44
    TOK_FOR         shift, and go to state 45
    TOK_BOOLEAN     shift, and go to state 17
    TOK_IF          shift, and go to state 46
    TOK_INT         shift, and go to state 18
    TOK_FLOAT       shift, and go to state 21
    TOK_WHILE       shift, and go to state 47
    TOK_SUBSUB      shift, and go to state 48
    TOK_ADDADD      shift, and go to state 49

    datatype                 go to state 50
    block                    go to state 51
    statement                go to state 52
    expressionstatement      go to state 53
    controlflowstatement     go to state 54
    declarationstatement     go to state 55
    assignmentstatement      go to state 56
    initializationstatement  go to state 57
    whileloop                go to state 58
    forloop                  go to state 59
    ifstatement              go to state 60
    ifelsestatement          go to state 61
    assignmentopexpression   go to state 62
    postdecrement            go to state 63
    predecrement             go to state 64
    methodinvocation         go to state 65
    instancemethodcall       go to state 66
    methodcall               go to state 67
    fieldreference           go to state 68


State 41

   16 formalparameters: formalparameters TOK_COMMA datatype . TOK_IDENTIFIER

    TOK_IDENTIFIER  shift, and go to state 69


State 42

   11 staticmethod: accessmod TOK_STATIC returntype TOK_IDENTIFIER TOK_LPAREN formalparameters TOK_RPAREN TOK_LBRACE . block TOK_RBRACE

    TOK_IDENTIFIER  shift, and go to state 44
    TOK_FOR         shift, and go to state 45
    TOK_BOOLEAN     shift, and go to state 17
    TOK_IF          shift, and go to state 46
    TOK_INT         shift, and go to state 18
    TOK_FLOAT       shift, and go to state 21
    TOK_WHILE       shift, and go to state 47
    TOK_SUBSUB      shift, and go to state 48
    TOK_ADDADD      shift, and go to state 49

    datatype                 go to state 50
    block                    go to state 70
    statement                go to state 52
    expressionstatement      go to state 53
    controlflowstatement     go to state 54
    declarationstatement     go to state 55
    assignmentstatement      go to state 56
    initializationstatement  go to state 57
    whileloop                go to state 58
    forloop                  go to state 59
    ifstatement              go to state 60
    ifelsestatement          go to state 61
    assignmentopexpression   go to state 62
    postdecrement            go to state 63
    predecrement             go to state 64
    methodinvocation         go to state 65
    instancemethodcall       go to state 66
    methodcall               go to state 67
    fieldreference           go to state 68


State 43

   10 main: accessmod TOK_STATIC returntype TOK_IDENTIFIER TOK_LPAREN datatype TOK_IDENTIFIER TOK_LBRACKET . TOK_RBRACKET TOK_RPAREN TOK_LBRACE block TOK_RBRACE

    TOK_RBRACKET  shift, and go to state 71


State 44

   20 datatype: TOK_IDENTIFIER .
   40 assignmentstatement: TOK_IDENTIFIER . TOK_ASSIGN methodinvocation TOK_SEMI
   77 assignmentopexpression: TOK_IDENTIFIER . assignmentoperator arithmeticopexpression
   78 postdecrement: TOK_IDENTIFIER . TOK_ADDADD
   79              | TOK_IDENTIFIER . TOK_SUBSUB
   85 instancemethodcall: TOK_IDENTIFIER . TOK_DOT methodcall
   86 methodcall: TOK_IDENTIFIER . TOK_LPAREN argument TOK_RPAREN
   88 fieldreference: TOK_IDENTIFIER . TOK_DOT TOK_IDENTIFIER

    TOK_LPAREN     shift, and go to state 72
    TOK_DOT        shift, and go to state 73
    TOK_ASSIGN     shift, and go to state 74
    TOK_MODASSIGN  shift, and go to state 75
    TOK_DIVASSIGN  shift, and go to state 76
    TOK_MULASSIGN  shift, and go to state 77
    TOK_ADDASSIGN  shift, and go to state 78
    TOK_SUBASSIGN  shift, and go to state 79
    TOK_SUBSUB     shift, and go to state 80
    TOK_ADDADD     shift, and go to state 81

    $default  reduce using rule 20 (datatype)

    assignmentoperator  go to state 82


State 45

   44 forloop: TOK_FOR . TOK_LPAREN initializationstatement relationalopexpression TOK_SEMI postdecrement TOK_RPAREN TOK_LBRACE block TOK_RBRACE

    TOK_LPAREN  shift, and go to state 83


State 46

   45 ifstatement: TOK_IF . TOK_LPAREN relationalopexpression TOK_RPAREN TOK_LBRACE block TOK_RBRACE
   46            | TOK_IF . TOK_LPAREN logicalopexpression TOK_RPAREN TOK_LBRACE block TOK_RBRACE

    TOK_LPAREN  shift, and go to state 84


State 47

   42 whileloop: TOK_WHILE . TOK_LPAREN relationalopexpression TOK_RPAREN TOK_LBRACE block TOK_RBRACE
   43          | TOK_WHILE . TOK_LPAREN logicalopexpression TOK_RPAREN TOK_LBRACE block TOK_RBRACE

    TOK_LPAREN  shift, and go to state 85


State 48

   81 predecrement: TOK_SUBSUB . TOK_IDENTIFIER

    TOK_IDENTIFIER  shift, and go to state 86


State 49

   80 predecrement: TOK_ADDADD . TOK_IDENTIFIER

    TOK_IDENTIFIER  shift, and go to state 87


State 50

   38 declarationstatement: datatype . TOK_IDENTIFIER TOK_SEMI
   41 initializationstatement: datatype . assignmentstatement

    TOK_IDENTIFIER  shift, and go to state 88

    assignmentstatement     go to state 89
    assignmentopexpression  go to state 62


State 51

   12 instancemethod: accessmod returntype TOK_IDENTIFIER TOK_LPAREN formalparameters TOK_RPAREN TOK_LBRACE block . TOK_RBRACE
   25 block: block . statement

    TOK_IDENTIFIER  shift, and go to state 44
    TOK_FOR         shift, and go to state 45
    TOK_BOOLEAN     shift, and go to state 17
    TOK_IF          shift, and go to state 46
    TOK_INT         shift, and go to state 18
    TOK_FLOAT       shift, and go to state 21
    TOK_WHILE       shift, and go to state 47
    TOK_RBRACE      shift, and go to state 90
    TOK_SUBSUB      shift, and go to state 48
    TOK_ADDADD      shift, and go to state 49

    datatype                 go to state 50
    statement                go to state 91
    expressionstatement      go to state 53
    controlflowstatement     go to state 54
    declarationstatement     go to state 55
    assignmentstatement      go to state 56
    initializationstatement  go to state 57
    whileloop                go to state 58
    forloop                  go to state 59
    ifstatement              go to state 60
    ifelsestatement          go to state 61
    assignmentopexpression   go to state 62
    postdecrement            go to state 63
    predecrement             go to state 64
    methodinvocation         go to state 65
    instancemethodcall       go to state 66
    methodcall               go to state 67
    fieldreference           go to state 68


State 52

   24 block: statement .

    $default  reduce using rule 24 (block)


State 53

   26 statement: expressionstatement .

    $default  reduce using rule 26 (statement)


State 54

   27 statement: controlflowstatement .

    $default  reduce using rule 27 (statement)


State 55

   28 statement: declarationstatement .

    $default  reduce using rule 28 (statement)


State 56

   29 statement: assignmentstatement .

    $default  reduce using rule 29 (statement)


State 57

   30 statement: initializationstatement .

    $default  reduce using rule 30 (statement)


State 58

   34 controlflowstatement: whileloop .

    $default  reduce using rule 34 (controlflowstatement)


State 59

   35 controlflowstatement: forloop .

    $default  reduce using rule 35 (controlflowstatement)


State 60

   36 controlflowstatement: ifstatement .
   47 ifelsestatement: ifstatement . TOK_ELSE TOK_LBRACE block TOK_RBRACE

    TOK_ELSE  shift, and go to state 92

    $default  reduce using rule 36 (controlflowstatement)


State 61

   37 controlflowstatement: ifelsestatement .

    $default  reduce using rule 37 (controlflowstatement)


State 62

   39 assignmentstatement: assignmentopexpression . TOK_SEMI

    TOK_SEMI  shift, and go to state 93


State 63

   32 expressionstatement: postdecrement . TOK_SEMI

    TOK_SEMI  shift, and go to state 94


State 64

   33 expressionstatement: predecrement . TOK_SEMI

    TOK_SEMI  shift, and go to state 95


State 65

   31 expressionstatement: methodinvocation . TOK_SEMI

    TOK_SEMI  shift, and go to state 96


State 66

   83 methodinvocation: instancemethodcall .

    $default  reduce using rule 83 (methodinvocation)


State 67

   82 methodinvocation: methodcall .
   87 methodcall: methodcall . TOK_DOT TOK_IDENTIFIER TOK_LPAREN argument TOK_RPAREN

    TOK_DOT  shift, and go to state 97

    $default  reduce using rule 82 (methodinvocation)


State 68

   84 instancemethodcall: fieldreference . TOK_DOT methodcall
   89 fieldreference: fieldreference . TOK_DOT TOK_IDENTIFIER

    TOK_DOT  shift, and go to state 98


State 69

   16 formalparameters: formalparameters TOK_COMMA datatype TOK_IDENTIFIER .

    $default  reduce using rule 16 (formalparameters)


State 70

   11 staticmethod: accessmod TOK_STATIC returntype TOK_IDENTIFIER TOK_LPAREN formalparameters TOK_RPAREN TOK_LBRACE block . TOK_RBRACE
   25 block: block . statement

    TOK_IDENTIFIER  shift, and go to state 44
    TOK_FOR         shift, and go to state 45
    TOK_BOOLEAN     shift, and go to state 17
    TOK_IF          shift, and go to state 46
    TOK_INT         shift, and go to state 18
    TOK_FLOAT       shift, and go to state 21
    TOK_WHILE       shift, and go to state 47
    TOK_RBRACE      shift, and go to state 99
    TOK_SUBSUB      shift, and go to state 48
    TOK_ADDADD      shift, and go to state 49

    datatype                 go to state 50
    statement                go to state 91
    expressionstatement      go to state 53
    controlflowstatement     go to state 54
    declarationstatement     go to state 55
    assignmentstatement      go to state 56
    initializationstatement  go to state 57
    whileloop                go to state 58
    forloop                  go to state 59
    ifstatement              go to state 60
    ifelsestatement          go to state 61
    assignmentopexpression   go to state 62
    postdecrement            go to state 63
    predecrement             go to state 64
    methodinvocation         go to state 65
    instancemethodcall       go to state 66
    methodcall               go to state 67
    fieldreference           go to state 68


State 71

   10 main: accessmod TOK_STATIC returntype TOK_IDENTIFIER TOK_LPAREN datatype TOK_IDENTIFIER TOK_LBRACKET TOK_RBRACKET . TOK_RPAREN TOK_LBRACE block TOK_RBRACE

    TOK_RPAREN  shift, and go to state 100


State 72

   86 methodcall: TOK_IDENTIFIER TOK_LPAREN . argument TOK_RPAREN

    TOK_IDENTIFIER  shift, and go to state 101
    TOK_INTVAL      shift, and go to state 102
    TOK_FLOATVAL    shift, and go to state 103
    TOK_STRINGVAL   shift, and go to state 104
    TOK_DOUBLEVAL   shift, and go to state 105

    $default  reduce using rule 17 (argument)

    argument                go to state 106
    arithmeticopexpression  go to state 107


State 73

   85 instancemethodcall: TOK_IDENTIFIER TOK_DOT . methodcall
   88 fieldreference: TOK_IDENTIFIER TOK_DOT . TOK_IDENTIFIER

    TOK_IDENTIFIER  shift, and go to state 108

    methodcall  go to state 109


State 74
